<resources>
    <string name="app_name">Hear Hues</string>
    <string name="title_fragment_landing">Landing Page</string>
    <string name="landing_heading">Choose an activity…</string>
    <string name="title_fragment_hear_hue">Hear Hue</string>
    <string name="HH_title">Hear Hue</string>
    <string name="HH_description">Hear the sound of colour</string>
    <string name="HH_toneHeading">Tone: </string>
    <string name="HH_tone">440 Hz</string>
    <string name="HH_hueTitle">Hue: </string>
    <string name="HH_hue">#E8CDAB</string>
    <string name="HH_btn_capturePhoto">Capture Photograph</string>
    <string name="HH_btn_toggleCamera">Toggle Camera</string>
    <string name="HH_btn_playPause">Play/Pause</string>
    <string name="HH_iv_tone">Tone</string>
    <string name="HH_iv_hue">Hue</string>
    <string name="hear_hue_alert_no_camera">No camera found!</string>
    <string name="request_permission">This feature requires camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_fragment_tread_tone">Tread Tone</string>
    <string name="tread_tone_summary">Create sound by walking</string>
    <string name="tread_tone_iv_tone">Tone</string>
    <string name="tread_tone_tv_tone"> </string>
    <string name="tread_tone_btn_playPause">Play/Pause</string>
    <string name="tread_tone_iv_tread">Tread</string>
    <string name="tread_tone_tv_heading">Waiting for location…</string>
    <string name="tread_tone_ivbtn_origin">Update Origin</string>
    <string name="fragment_tinker_title">Tinker</string>
    <string name="tinker_summary">Play around</string>
    <string name="tinker_hue_view_title">Tap a colour to hear it\'s sound
    \n Not actually implemented yet, sorry.</string>
    <string name="tinker_loc_view_title">Convert coordinates to notes
    \n Horizontal axis: frequency, vertical: amplitude.</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="about_project_heading">@string/app_name</string>
    <string name="about_project_body">
This app was developed for a \"Sensor Implementation\" project in a
<a href="http://www.flinders.edu.au">university</a> mobile application development topic.
    </string>
    <string name="title_fragment_about">About</string>
    <string name="about_hear_hue_heading">Hear Hue</string>
    <string name="about_hear_hue_body">The idea for Hear Hue comes from
        <a href="https://en.wikipedia.org/wiki/Neil_Harbisson">Neil Harbisson</a>,
the worlds first government-recognized cyborg.
Neil was born into the grey world of <a href="https://en.wikipedia.org/wiki/Achromatopsia">achromatopsia</a>
(total colour blindness) and has never seen colour. In 2004 Harbisson had an antenna surgically implanted
into his skull, allowing him to \'hear\' colour.
\n This app converts colour extracted from the camera into it\'s raw \'hue\' (without saturation or
luminance) and maps it to a range of tones. As no literature appears to have been published on the
implant, the mapping used by Harbisson is unknown, leaving us free to play with it in the settings.
    </string>
    <string name="about_iv_neil_harbisson">Image of Neil Harbisson</string>
    <string name="about_tread_tone_heading">Tread Tone</string>
    <string name="about_tread_tone_body">Tread Tone takes the device\'s location as input for a
        tone generator. Longitudinal movement
(parallel to the equator) determines the frequency, while latitudinal movement determines the
amplitude (volume).
    </string>
    <string name="action_mute">Toggle Mute</string>
    <string name="navigation_drawer_primary_features">Primary Features</string>
    <string name="navigation_drawer_secondary_features">Ancillary Features</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Hear Hues</string>
    <string name="toast_tread_tune_location_rationale">The sole purpose of Tread Tune requires
        this permission to function.</string>
    <string name="alert_enable_location_setting_title">Location is disabled</string>
    <string name="alert_enable_location_setting_message">Please go to settings and enable location in order to
        use this feature.</string>
    <string name="alert_enable_location_setting_positive">Go to settings</string>
    <string name="alert_enable_location_setting_negative">Cancel</string>
    <string name="alert_location_permission_refused_title">This feature requires location access</string>
    <string name="alert_location_permission_refused_message">Sorry, the sole purpose of Tread Tune
        requires this permission to function.</string>
    <string name="alert_location_permission_refused_negative">Cancel</string>
    <string name="toast_hear_hue_camera_rational">The sole purpose of Hear Hue requires this
        permission to function.</string>
<string name="alert_camera_permission_refused_title">This feature requires camera access</string>
    <string name="alert_camera_permission_refused_message">Sorry, the sole purpose of Hear Hue
        requires this permission to function.</string>
    <string name="alert_camera_permission_refused_negative">Cancel</string>
    <string name="prefs_palette_category">Hear Hue</string>
    <string name="prefs_palette_swatch_key">palette_swatch</string>
    <string name="prefs_palette_swatch_title">Colour Extraction</string>
    <string name="prefs_palette_swatch_summary">Method for extracting a colour from the photograph</string>
    <string name="prefs_palette_swatch_default">Vibrant</string>
    <string-array name="prefs_palette_swatch_entries">
        <item>Dominant</item>
        <item>Vibrant</item>
        <item>Vibrant Light</item>
        <item>Vibrant Dark</item>
    </string-array>
    <string name="prefs_palette_area_key">palette_area</string>
    <string name="prefs_palette_area_title">Colour Resolution</string>
    <string name="prefs_palette_area_summary">Number of candidate cells (affects processing time)</string>
    <string name="prefs_palette_area_default">Medium</string>
    <string-array name="prefs_palette_area_entries">
        <item>Very Low</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>
    <string name="prefs_palette_number_key">palette_number</string>
    <string name="prefs_palette_number_title">Colour Precision</string>
    <string name="prefs_palette_number_summary">Number of candidate colours (affects processing time)</string>
    <string name="prefs_palette_number_default">Medium</string>
    <string-array name="prefs_palette_number_entries">
        <item>Very Low</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>
    <string name="prefs_save_files_key">save_files</string>
    <string name="prefs_save_files_title">Save Photographs</string>
    <string name="prefs_save_files_summary">Captured stills will be saved to disk</string>
    <string name="prefs_save_files_default">false</string>
    <string name="prefs_tread_tone_category">Tread Tone</string>
    <string name="prefs_tread_tone_window_width_key">tread_tone_window_width</string>
    <string name="prefs_tread_tone_window_width_title">Window Width</string>
    <string name="prefs_tread_tone_window_width_summary">Distance from minimum to maximum frequency</string>
    <string name="prefs_tread_tone_window_width_default">54</string>
    <string-array name="prefs_tread_tone_window_width_entries">
        <item>Very Tiny</item>
        <item>Tiny</item>
        <item>Very Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Very Large</item>
        <item>Huge</item>
        <item>Very Huge</item>
    </string-array>
    <string-array name="prefs_tread_tone_window_width_values">
        <item>12</item>
        <item>17</item>
        <item>25</item>
        <item>37</item>
        <item>54</item>
        <item>78</item>
        <item>113</item>
        <item>165</item>
        <item>240</item>
    </string-array>
    <string name="prefs_tread_tone_window_height_key">tread_tone_window_height</string>
    <string name="prefs_tread_tone_window_height_title">Window Height</string>
    <string name="prefs_tread_tone_window_height_summary">Distance from minimum to maximum amplitude</string>
    <string name="prefs_tread_tone_window_height_default">54</string>
    <string-array name="prefs_tread_tone_window_height_entries">
        <item>Very Tiny</item>
        <item>Tiny</item>
        <item>Very Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Very Large</item>
        <item>Huge</item>
        <item>Very Huge</item>
    </string-array>
    <string-array name="prefs_tread_tone_window_height_values">
        <item>12</item>
        <item>17</item>
        <item>25</item>
        <item>37</item>
        <item>54</item>
        <item>78</item>
        <item>113</item>
        <item>165</item>
        <item>240</item>
    </string-array>
    <string name="prefs_tread_tone_location_timeout_key">tread_tone_location_timeout</string>
    <string name="prefs_tread_tone_location_timeout_title">Location Timout</string>
    <string name="prefs_tread_tone_location_timeout_summary">Shorter timeouts force more frequent but less accurate updates</string>
    <string name="prefs_tread_tone_location_timeout_default">25</string>
    <string-array name="prefs_tread_tone_location_timeout_entries">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Silly</item>
    </string-array>
    <string-array name="prefs_tread_tone_location_timeout_values">
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>40</item>
        <item>60</item>
        <item>90</item>
    </string-array>
    <string name="prefs_tread_tone_location_accuracy_key">tread_tone_location_accuracy</string>
    <string name="prefs_tread_tone_location_accuracy_title">Location Accuracy</string>
    <string name="prefs_tread_tone_location_accuracy_summary">Stricter accuracy requirements increase reliability but decrease update frequency</string>
    <string name="prefs_tread_tone_location_accuracy_default">44</string>
    <string-array name="prefs_tread_tone_location_accuracy_entries">
        <item>Very strict</item>
        <item>Strict</item>
        <item>Semi-strict</item>
        <item>Medium</item>
        <item>Semi-lax</item>
        <item>Lax</item>
        <item>Very lax</item>
    </string-array>
    <string-array name="prefs_tread_tone_location_accuracy_values">
        <item>10</item>
        <item>16</item>
        <item>27</item>
        <item>44</item>
        <item>74</item>
        <item>121</item>
        <item>200</item>
    </string-array>
    <string name="prefs_generator_category">Tone Generator</string>
    <string name="prefs_playback_seconds_key">playback_seconds</string>
    <string name="prefs_playback_seconds_title">Playback Duration</string>
    <string name="prefs_playback_seconds_summary">How long to play a tone for</string>
    <string name="prefs_playback_seconds_default">1.6</string>
    <string-array name="prefs_playback_seconds_entries">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>
    <string-array name="prefs_playback_seconds_values">
        <item>0.8</item>
        <item>1.6</item>
        <item>2.4</item>
    </string-array>
    <string name="prefs_generator_base_frequency_key">generator_base_frequency</string>
    <string name="prefs_generator_base_frequency_title">Base Tone</string>
</resources>